# wav-takes-to-aaf

./: .gitignore  LICENSE  README.md  pyproject.toml  run.sh  wav-takes-to-aaf-spec.md
docs/: SPEC.md
tests/: conftest.py  test_aaf_writer_smoke.py  test_grouper.py  test_scanner.py  test_timeline.py
wav_takes_to_aaf/: aaf_writer.py  cli.py  grouper.py  preview.py  scanner.py  timeline.py
